styles.css
/* ... */
.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"].bullet-plugin-hovered-outer-list-guide::before {
  inset-inline-end: -1px;
  inline-size: 3px;
  border-inline-end: 0;
  background-color: var(--indentation-guide-color-active);
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"].bullet-plugin-hovered-outer-list-guide.bullet-plugin-hovered-outer-list-guide-start::before {
  border-start-start-radius: 2px;
  border-start-end-radius: 2px;
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"].bullet-plugin-hovered-outer-list-guide.bullet-plugin-hovered-outer-list-guide-end::before {
  border-end-start-radius: 2px;
  border-end-end-radius: 2px;
}

body:not(
    .is-mobile
  ).bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .bullet-plugin-outer-list-guide[data-actionable="true"].bullet-plugin-hovered-outer-list-guide::before {
  inset-inline-start: -1px;
  inset-inline-end: auto;
}

.bullet-plugin-vertical-lines-action-toggle-folding
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent {
  cursor: pointer;
}

.markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-selected-indent-guide::before {
  border-inline-end: var(--indentation-guide-width-active) solid
    var(--indentation-guide-color-active);
}

.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-selected-indent-guide::before {
  inline-size: 3px;
  border-inline-end: 0;
  background-color: var(--indentation-guide-color-active);
}

.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-selected-indent-guide.bullet-plugin-selected-indent-guide-start::before {
  border-start-start-radius: 2px;
  border-start-end-radius: 2px;
}

.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-selected-indent-guide.bullet-plugin-selected-indent-guide-end::before {
  border-end-start-radius: 2px;
  border-end-end-radius: 2px;
}

.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-selected-indent-guide::before {
  margin-inline-start: var(--indentation-guide-editing-indent);
}

.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6:not(.is-live-preview)
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-selected-indent-guide::before {
  margin-inline-start: var(--indentation-guide-source-indent);
}

.bullet-plugin-vertical-lines-action-toggle-folding
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-hovered-indent-guide::before {
  border-inline-end: var(--indentation-guide-width-active) solid
    var(--indentation-guide-color-active);
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-hovered-indent-guide::before {
  inline-size: 3px;
  border-inline-end: 0;
  background-color: var(--indentation-guide-color-active);
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-hovered-indent-guide.bullet-plugin-hovered-indent-guide-start::before {
  border-start-start-radius: 2px;
  border-start-end-radius: 2px;
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-hovered-indent-guide.bullet-plugin-hovered-indent-guide-end::before {
  border-end-start-radius: 2px;
  border-end-end-radius: 2px;
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-hovered-indent-guide::before {
  margin-inline-start: var(--indentation-guide-editing-indent);
}

.bullet-plugin-vertical-lines-action-toggle-folding.bullet-plugin-enhanced-vertical-line-hover
  .markdown-source-view.mod-cm6:not(.is-live-preview)
  .cm-hmd-list-indent
  .cm-indent.bullet-plugin-hovered-indent-guide::before {
  margin-inline-start: var(--indentation-guide-source-indent);
}

body:not(.is-mobile)
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-line.HyperMD-list-line:has(.cm-fold-indicator)
  .cm-fold-indicator
  .collapse-indicator {
  display: flex;
  box-sizing: border-box;
  align-items: center;
  justify-content: center;
  inset-inline-start: -5px;
  inset-inline-end: auto;
  width: 14px;
  padding-inline: 0;
  opacity: 0;
  visibility: hidden;
  pointer-events: none;
}

body:not(.is-mobile)
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-line.HyperMD-list-line:has(.cm-fold-indicator):hover
  .cm-fold-indicator
  .collapse-indicator {
  opacity: 1;
  visibility: visible;
  pointer-events: auto;
}

body:not(.is-mobile).bullet-plugin-vertical-lines-action-toggle-folding
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-line.HyperMD-list-line:has(.cm-fold-indicator):hover
  .cm-fold-indicator {
  z-index: 3;
}

body:not(.is-mobile).bullet-plugin-vertical-lines-action-toggle-folding
  .markdown-source-view.mod-cm6.is-live-preview
  .cm-line.HyperMD-list-line:has(.cm-fold-indicator):hover
  .cm-fold-indicator
  .collapse-indicator {
  pointer-events: none;
}
/* ... */

